# obs-studio

./: .gitignore  .gitmodules  CMakePresets.json  buildspec.json
UI/: CMakeLists.txt  auth-oauth.cpp  auth-restream.cpp  auth-twitch.cpp  auth-twitch.hpp  basic-controls.cpp  basic-controls.hpp  obs-app-theming.cpp  obs-app.cpp  obs-app.hpp  obs-proxy-style.cpp  obs-proxy-style.hpp  platform-x11.cpp  platform.hpp  properties-view.cpp  qt-display.cpp  qt-display.hpp  scene-tree.cpp  scene-tree.hpp  ui-config.h.in  volume-control.cpp  volume-control.hpp  window-basic-about.cpp  window-basic-main-browser.cpp  window-basic-main-profiles.cpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings.cpp  window-basic-stats.cpp  window-basic-status-bar.cpp  window-basic-status-bar.hpp  window-dock-browser.hpp  window-dock-youtube-app.cpp  window-dock.cpp  window-dock.hpp  window-projector.cpp
UI/data/: twitch.css  twitch.sass
UI/forms/: OBSBasic.ui  OBSBasicControls.ui  StatusBarWidget.ui
UI/frontend-plugins/: CMakeLists.txt
UI/installer/: mp-installer.nsi
UI/obs-process-priority/: CMakeLists.txt  obs-process-priority.cpp
frontend/: CMakeLists.txt  OBSApp.cpp  OBSApp.hpp  OBSApp_Themes.cpp  obs-main.cpp
libobs/: CMakeLists.txt  obs-data.cpp  obs-data.h  obs-encoder.c
plugins/obs-ffmpeg/amf/: CMakeLists.txt  amf.cpp  amf.hpp  encoder.cpp  encoder.hpp  fallback.cpp  fallback.hpp  linux.cpp  linux.hpp  module.cpp  module.hpp  properties.cpp  properties.hpp  settings.cpp  settings.hpp  windows.cpp  windows.hpp
plugins/obs-ffmpeg/obs-amf-test/: CMakeLists.txt  obs-amf-test-linux.cpp  obs-amf-test.cpp
plugins/obs-ffmpeg/obs-amf-test/cmake/: legacy.cmake
(+133 files in other folders)
